@@ -4,10 +4,12 @@
  * it under the terms of the GNU General Public License as published by
  * the Free Software Foundation, either version 3 of the License, or
  * (at your option) any later version.
+ *
  * This program is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  * GNU General Public License for more details.
+ *
  * You should have received a copy of the GNU General Public License
  * along with this program (see LICENSE.txt in the base directory.  If
  * not, see:
@@ -16,13 +18,17 @@
  * @author    niel
  * @copyright 2016 nZEDb
  */
-require_once 'config' . DS . 'Configure.php';
-require_once nZEDb_ROOT . 'constants.php';
+require_once realpath(dirname(__DIR__) . DIRECTORY_SEPARATOR . 'constants.php');
+require_once nZEDb_ROOT . 'app/libraries/autoload.php';
+//require_once 'config' . DS . 'Configure.php';
 
 use \nzedb\config\Configure;
 use nzedb\utility\Misc;
 
-define('HAS_WHICH', Misc::hasWhich() ? true : false);
+
+if (!defined('HAS_WHICH')) {
+	define('HAS_WHICH', Misc::hasWhich() ? true : false);
+}
 
 new Configure('indexer');
 
