@@ -8,7 +8,10 @@ All entries are dated according to merging into the code in dev branch. THIS MEA
 NOT BE PRESENT IN THE STABLE BRANCH
 For details of when a commit makes it into the stable branch see the ReleaseNotes file.
 
-
+2016-07-07 niel
+	Add: Create new bootstrap file ).../bootstrap.php) to enable nzedb and lithium's app libraries to load together.
+		 New files should use it as the base require_once instead of indexer.php. Old file will be
+		converted over when it is convenient.
 2016-07-06 niel
 	Fix: Other category not available on new installs, due to insert query still using 'category' table.
 	Add: Included lithium app into the autoload process. All of its classes should now be
